# live2d_ros

./: CMakeLists.txt  README.md
include/: AppDelegate.h
old/: CMakeLists (2022.07.13コピー).txt  CMakeLists (コピー).txt  CMakeLists (別のコピー).txt  CMakeLists copy.txt
old/live2d_ros/: _CMakeLists.txt  package.xml
old/live2d_ros/src/: test_1_.cpp
old/scripts/: make_gcc
src/: test_1.cpp
src/lib/: CMakeLists.txt
